@@ -1,5 +1,6 @@
 DATE       AUTHOR       CHANGE
 ---------- ------------ -------------------------------------------------------
+2004-08-19 allenb       Added fast inverse square root.
 2004-08-03 allenb       Refactored seg/tri intersection test to remove two
                         un-needed divisions.
 2004-07-21 allenb       Refactored code for seg/line intersect with plane
